# sirup

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  config.sample.toml  default.nix  flake.nix  package.nix  shell.nix
.github/workflows/: release-on-demand.yml  releases.yml
src/: account.rs  cli.rs  config.rs  main.rs  repl.rs  session.rs  stream.rs
