[package]
name = "sirup"
description = "CLI to spawn pre-authenticated IMAP sessions and expose them via Unix sockets"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "AGPL-3.0-only"
categories = ["command-line-utilities"]
keywords = ["cli", "imap", "session", "repl", "auth"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/sirup"
repository = "https://github.com/pimalaya/sirup"

[features]
default = ["rustls-ring"]
native-tls = ["dep:native-tls"]
rustls-aws = ["dep:rustls-platform-verifier", "rustls/aws-lc-rs"]
rustls-ring = ["dep:rustls-platform-verifier", "rustls/ring"]

[build-dependencies]
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
dirs = "6"
io-imap = { version = "0.0.1", default-features = false }
io-stream = { version = "0.0.2", features = ["std"] }
log = "0.4"
native-tls = { version = "0.2", optional = true }
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["config", "terminal", "secret", "command"] }
rustls = { version = "0.23", default-features = false, optional = true }
rustls-platform-verifier = { version = "0.6", optional = true }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }

[patch.crates-io]
io-imap = { git = "https://github.com/pimalaya/io-imap", branch = "io" }
io-stream.git = "https://github.com/pimalaya/io-stream"
pimalaya-toolbox.git = "https://github.com/pimalaya/toolbox"
