[package]
name = "sirup"
description = "CLI to spawn pre-authenticated IMAP/SMTP sessions and expose them via Unix sockets"
version = "0.1.0"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
edition = "2021"
license = "AGPL-3.0-only"
categories = ["command-line-utilities"]
keywords = ["cli", "imap", "session", "smtp", "auth"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/sirup"
repository = "https://github.com/pimalaya/sirup"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["imap", "smtp", "rustls-ring"]

imap = ["dep:io-imap", "pimalaya-toolbox/imap"]
smtp = ["dep:io-smtp", "pimalaya-toolbox/smtp"]

native-tls = ["pimalaya-toolbox/native-tls"]
rustls-aws = ["pimalaya-toolbox/rustls-aws"]
rustls-ring = ["pimalaya-toolbox/rustls-ring"]

vendored = ["pimalaya-toolbox/vendored"]

[build-dependencies]
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
dirs = "6"
io-imap = { version = "0.0.1", default-features = false, optional = true }
io-process = { version = "0.0.2", default-features = false, features = ["std"] }
io-smtp = { version = "0.0.1", default-features = false, features = ["starttls", "ext_auth"], optional = true }
io-stream = { version = "0.0.2", features = ["std"] }
log = "0.4"
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["config", "terminal", "secret"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }

[patch.crates-io]
io-imap = { git = "https://github.com/pimalaya/io-imap", branch = "io" }
io-smtp.git = "https://github.com/pimalaya/io-smtp"
pimalaya-toolbox.git = "https://github.com/pimalaya/toolbox"
smtp-codec.git = "https://github.com/pimalaya/smtp-codec"
